--- a/main.css
+++ b/main.css
@@ -1,1 +1,39 @@
+ body {
+ font-family: "Noto Sans", sans-serif;
+ margin:0;
+ padding:0;
+ background-color: #e8e8e8;
+ color: #000000;
+ }
+        
+ .top-panel {
+ background-color: #ff0000;
+ color: #02b3ff;
+ padding: 10px;
+ text-align: center;
+ }
+        
+ .top-panel a {
+ color: #000000;
+ text-decoration: none;
+ margin: 0 20px;
+ }
+        
+/* Подвал сайта */
+        footer {
+            width: 100%;
+            background-color: #2c3e50; /* Темно-серый фон */
+            color: white;
+            text-align: center;
+            padding: 30px 0;
+            margin-top: auto; /* Прижимаем подвал к низу */
+        }
 
+        .footer-text {
+            font-size: 0.9em;
+            opacity: 0.7;
+        }
+        .footer-text a {
+            color: #3498db;
+            text-decoration: none;
+        }
